--- a/HEXRayFSS.vcxproj.filters
+++ b/HEXRayFSS.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="MyConst.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="NetSettingDlg.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="HEXRayFSS.cpp">
@@ -66,6 +69,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="json\lib_json\json_writer.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="NetSettingDlg.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
